--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TravelBloom - Discover Your Next Adventure</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-  
+    <link rel="stylesheet" href="styles.css">  
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -81,6 +81,7 @@
             </a>
         </div>
     </section>
+    <script src="script.js"></script>
 
   
 </body>
