--- a/index.html
+++ b/index.html
@@ -8,30 +8,32 @@
     <link rel="stylesheet" href="styles.css">  
 </head>
 <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar" id="navbar">
-        <a href="#" class="logo">
-            <i class="fas fa-globe-americas"></i>
-            TravelBloom
-        </a>
-        
-        <ul class="nav-links">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About Us</a></li>
-            <li><a href="#contact">Contact Us</a></li>
-        </ul>
+   <!-- Navigation Bar -->
+<nav class="navbar" id="navbar">
+  <div class="container">
+    <a href="#" class="logo">
+      <i class="fas fa-globe-americas"></i>
+      TravelBloom
+    </a>
 
-        <div class="search-container">
-            <input 
-                type="text" 
-                class="search-bar" 
-                placeholder="Search destinations, experiences..."
-                id="searchInput"
-            >
-            <i class="fas fa-search search-icon"></i>
-            <div class="search-results" id="searchResults"></div>
-        </div>
-    </nav>
+    <ul class="nav-links">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About Us</a></li>
+      <li><a href="#contact">Contact Us</a></li>
+    </ul>
+
+    <div class="search-container">
+      <input 
+        type="text" 
+        class="search-bar" 
+        placeholder="Search destinations, experiences..."
+        id="searchInput"
+      >
+      <i class="fas fa-search search-icon"></i>
+      <div class="search-results" id="searchResults"></div>
+    </div>
+  </div>
+</nav>
 
     <!-- Hero Section -->
     <section class="hero" id="home">
