--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
     </div>
 
     <!-- Hero Section -->
-    <section class="relative min-h-screen bg-gradient-to-br from-primary via-secondary to-accent flex items-center justify-center overflow-hidden" id="home">
+    <section class="relative min-h-screen bg-gradient-to-br from-primary via-secondary to-accent flex items-center justify-center overflow-hidden" 
+         style="background-image: linear-gradient(rgba(102, 126, 234, 0.7), rgba(118, 75, 162, 0.7), rgba(240, 147, 251, 0.7)), url('background.jpg'); background-size: cover; background-position: center; background-attachment: fixed;" 
+         id="home">
         <!-- Floating Elements -->
         <div class="absolute inset-0 overflow-hidden">
             <div class="absolute top-20 left-10 animate-float">
