--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <input 
                         type="text" 
                         class="w-64 pl-10 pr-12 py-2 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent"
-                        placeholder="Search destinations..."
+                        placeholder="beach, Indonesia..."
                         id="searchInput"
                     >
                     <i class="fas fa-search absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400"></i>
